        Class LensSpace:
            - Added member and global swap() functions.
        Class LessDeref:
            - Removed completely.  Just use a lamba if you need to.
        Class LightweightSequence<T>:
            - Added member and global swap() functions.
            - Added a constructor that takes a combination of elements
              and iterator pairs.
        Class Link:
            - New routines writheOfComponent() and selfFrame().
            - New routine group().
            - New routines pd(), pdData(), pd(std::ostream&) and fromPD() to
              work with planar diagram codes.  The "magic" constructor that
              takes a string can now also work with planar diagram codes.
            - New routines gaussData(), orientedGaussData(), jenkinsData(),
              dtData(), and fromJenkins(Iterator, Iterator) for working with
              knot/link codes in machine-readable format.
            - Routine fromData() now returns by value, and throws an exception
              on error (it used to return a newly allocated pointer that was
              null on error).
            - New routine brief(std::ostream&) to complement brief().
            - New alias fromSig(), which is is identical to fromKnotSig().
            - Class constants for Jones / HOMFLY-PT variable strings are
              now constexpr.
            - Renamed swapContents() to swap(); the old name is now a
              deprecated alias.  Also added a global regina::swap(Link&, Link&).
            - Overhauled rewrite() to be faster, more generic, and support
              actions that take a knot signature as well as a full knot
              diagram.  This function is now also available through Python,
              and can take a pure Python function as its action argument.
              It no longer runs in the background (even if a progress tracker
              is passed), and it now requires as a precondition that the link